software/applications/web-site/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-site
  labels:
    toolkit.fluxcd.io/tenant: dev-team
    istio-injection: enabled
