software/applications/web-site/httproute-web.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-site-default
  namespace: web-site
  labels:
    app: web-site
spec:
  parentRefs:
  - name: external-gateway
    namespace: istio-system
  - name: internal-gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: osdu-developer-web-service
      port: 80
      weight: 100
