software/applications/web-site/ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-site
  namespace: web-site
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/internal-gateway
    - istio-system/external-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: "osdu-developer-web-service.web-site.svc.cluster.local"
            port:
              number: 80
